<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/tvTeams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/heading_transparent_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/teams"
            android:textAlignment="center"
            android:textColor="@color/text_light"
            android:textSize="@dimen/heading_font_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTeams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark_transparent"
            tools:itemCount="4"
            tools:listitem="@layout/item_team" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/background_dark_transparent"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivTeamLogo"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:background="@color/background_dark_transparent"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btnSetLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/select_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp">
                <!-- Discrete slider -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTeamName"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:text="@string/team_name_semicolon"
                        android:textColor="@color/text_light"
                        android:textColorLink="@color/text_light"
                        android:textSize="@dimen/default_font_size" />

                    <EditText
                        android:id="@+id/tfTeamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/text_light"
                        android:textColorLink="@color/text_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTeamStrength"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".25"
                        android:text="@string/team_strength"
                        android:textColor="@color/text_light"
                        android:textSize="@dimen/default_font_size" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:stepSize="1"
                        android:valueFrom="0.0"
                        android:valueTo="100.0" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/background_dark_transparent"
        app:cardBackgroundColor="@color/background_dark_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTeams"
        app:layout_constraintStart_toStartOf="@+id/tvTeams"
        app:layout_constraintTop_toBottomOf="@+id/tvTeams"
        app:layout_constraintVertical_bias="0.0" >

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAddTeam"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView" />

    <EditText
        android:id="@+id/tfGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/background_dark_transparent"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/text_light"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toTopOf="@+id/btnFinish"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFinish"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>