<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llMatchesHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/heading_transparent"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/svGroups"
        app:layout_constraintStart_toStartOf="@id/svGroups"
        app:layout_constraintTop_toBottomOf="@id/svGroups">

        <TextView
            android:id="@+id/tvMatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/match"
            android:textColor="@color/text_light"
            android:textSize="@dimen/heading_font_size" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svGroups"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGroupHeading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_dark_transparent"
            android:clipToPadding="true"
            android:padding="10dp"
            tools:itemCount="4"
            tools:listitem="@layout/item_groupstage_team">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llGroupHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/heading_transparent"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/svGroups"
        app:layout_constraintStart_toStartOf="@id/svGroups"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/team"
            android:textColor="@color/text_light"
            android:textSize="@dimen/heading_font_size" />

        <TextView
            android:id="@+id/tvMatchesPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:fontFamily="sans-serif-black"
            android:text="@string/matches_played_short"
            android:textColor="@color/text_light"
            android:textSize="@dimen/heading_font_size" />

        <TextView
            android:id="@+id/tvTeamsInGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".157"
            android:fontFamily="sans-serif-black"
            android:text="@string/teams_short"
            android:textColor="@color/text_light"
            android:textSize="@dimen/heading_font_size" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/background_dark_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/llMatchesHeading"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/llMatchesHeading"
        app:layout_constraintTop_toBottomOf="@+id/llMatchesHeading"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/background_dark_transparent"
        android:text="Button"
        android:textColor="@color/text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/border"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>